--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "ext-json": "*",
     "ext-sockets": "*",
     "doctrine/collections": "^2.1",
-    "doctrine/dbal": "^3.8",
+    "doctrine/dbal": "^3.8|^4.2",
     "psr/log": "^3.0",
     "psr/simple-cache": "^3.0",
     "symfony/event-dispatcher": "^6.0|^7.0"
